2004-10-04  ------ omnetpp-3.0a8 released ------

2004-09-24  ------ omnetpp-3.0a7 released ------

2004-09-15  Andras Varga

        * ctopo.cc: implemented 2 new extractByModuleType() functions, see
        include/ChangeLog.

        * cmodule.cc: support for zero-sized module gates. A gate vector
        is zero size right after creation, and if there's no gatesize declared 
        in NED (and there's no manual setGateSize() call) it'll remain zero
        size. A zero-sized gate vector is represented by a single gate object
        whose size() method returns zero, and cannot be connected.

2004-08-11   Andras Varga

        * cchannel.cc: added check for negative delays

2004-07-22  ------ omnetpp-3.0a6 released ------

2004-07-15   Andras Varga

        * csimul.cc: deleteNetwork(): moved flushing event queue after deleting
        modules (because module destructors may contain delete cancelEvent(msg)
        calls)

2004-07-10   Andras Varga

        * csimul.cc,cmodule.cc,util.cc: added cSimulation::contextType() stuff

2004-07-05   Andras Varga

        * csimplemodule.cc: recordScalar() functions for text and cStatistic 
        data removed. A cStatistic object can be recorded into the scalar file 
        by calling its recordScalar() method (below).

        * cstat.cc: added recordScalar() method.

2004-06-24  Andras Varga

        * cpar.cc: implemented support for type M (XML element) in cPar.

2004-06-22  Andras Varga

        * added cxmlelement.cc

2004-06-07  ------ omnetpp-3.0a5 released ------

2004-05-15  ------ omnetpp-3.0a4 released ------

FIXME: cStdDev: info() should print mean(), stdDev() too!
FIXME: setTagArg("t", 0, "foo,bar") --> "invalid position"! (arg cannot contain comma)

2004-04-16  Andras Varga

        * cpar.cc, cenum.cc: fixed two possible bugs after Johnny's valgrinding

2004-04-13  Andras Varga

        * cmessage.cc: implemented new cMessage methods setControlInfo(), 
        removeControlInfo(), controlInfo().
