@@ -1,3 +1,10 @@
+2004-10-10  Andras Varga
+
+	* csimul.cc: fix: added preliminary setting of simtime to end of 
+	doOneEvent() -- this fixes bug in Tkenv "run until sim.time" function,
+	and sim.time display when single-stepping (it used to display time of 
+	last event, should be time of next event)
+
 2004-10-04  ------ omnetpp-3.0a8 released ------
 
 2004-09-24  ------ omnetpp-3.0a7 released ------
